# game_of_stones

./: .gitattributes  .gitignore  BasePhysicsComponent.cpp  CMakeLists.txt  Helpers.cmake  README.md
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
resources/: CMakeLists.txt  simple_frag.glsl  simple_vert.glsl  tex_vert.glsl
resources/models/: Bird_01.mtl  Helicopter.mtl  Helicopter2.mtl  final_prop.mtl  fpropeller.mtl
resources/models/birdcage/: bird_cage.mtl
resources/models/blimp/: Blimp.mtl
resources/models/cloud/: cloud_02.mtl
resources/models/flying_saucer/: CUPIC_FYINGSAUCER.mtl
resources/models/hang_glider/: glider.mtl
resources/models/propeller/: propeller.mtl
resources/shaders/: .water_vert.glsl.swp  DepthRTT.vertexshader  ShadowMapping.fragmentshader  ShadowMapping_frag.glsl  ShadowMapping_vert.glsl  SimpleTexture.fragmentshader  directionalLight_frag.glsl  directionalLight_geom.glsl  directionalLight_vert.glsl  heightmap_frag.glsl  heightmap_geom.glsl  heightmap_vert.glsl  lighting_frag.glsl  lighting_vert.glsl  mainVert.glsl  simple_frag.glsl  simple_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  tex_vert.glsl  voxel_normalCalc_frag.glsl  voxel_normalCalc_vert.glsl  water_frag.glsl  water_vert.glsl
src/: Actor.cpp  Actor.h  Application.cpp  Application.hpp  B2Draw_OpenGL.cpp  B2Draw_OpenGL.hpp  BirdPhysicsComponent.cpp  BirdPhysicsComponent.hpp  Block.cpp  Block.hpp  BulletDraw.cpp  BulletDraw.hpp  CMakeLists.txt  CagePhysicsComponent.cpp  CagePhysicsComponent.hpp  Camera.cpp  Camera.h  Camera.hpp  CastleDef.h  ChunkSystem.cpp  ChunkSystem.hpp  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentOrdering.h  ComponentStorage.hpp  Component_Manager.cpp  Component_Manager.hpp  Component_Storage.cpp  Component_Storage.hpp  DDS_Loader.cpp  DDS_Loader.hpp  DefaultGraphicsComponent.cpp  DefaultGraphicsComponent.hpp  DefaultInputComponent.cpp  DefaultInputComponent.hpp  DefaultPhysicsComponent.cpp  DefaultPhysicsComponent.hpp  EntityManager.cpp  EntityManager.hpp  (+89 more)
